Added map projection

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,10 @@
   <p>To preform all our magic, MuniMap requires a browser with Javascript supported and enabled. Make sure Javascript is enabled and then try reloading this page.</p>
 </noscript>
 
+<svg></svg>
+
 <!-- Application Scripts -->
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,Array.prototype.findIndex,Array.prototype.find"></script>
 <script type="text/javascript" src="js/scripts.js?version=1.30.4a"></script>
 
